@@ -48,6 +48,9 @@ RFCs
 
 Bugfixes
 ~~~~~~~~
+- Changed img.fonts.TrueTypeFont's constructor to throw an exception if
+  the font cannot be found
+  (friebe)
 - Fixed Runtime::memoryUsage() and Runtime::peakMemoryUsage()
   (friebe)
 - Fixed generics declaration parsing in create()
